[package]
name = "webdav-server"

# When releasing to crates.io:
# - Update html_root_url in src/main.rs
# - Update CHANGELOG.md.
# - Create git tag webdav-server-0.x.y
version = "0.3.0"

description = "webdav/http server with support for user accounts"
readme = "README.md"
documentation = "https://docs.rs/webdav-server"
repository = "https://github.com/miquels/webdav-server-rs"
homepage = "https://github.com/miquels/webdav-server-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
categories = ["filesystem"]

[workspace]

[dependencies]
clap = "2.33.0"
enum_from_str = "0.1.0"
enum_from_str_derive = "0.1.0"
env_logger = "0.7.1"
fs-quota = { path = "fs_quota", version = "0.1.0" }
futures = "0.3"
handlebars = "2.0.2"
headers = { git = "https://github.com/hyperium/headers" }
http = "0.2"
hyper = "0.13"
lazy_static = "1.4.0"
libc = "0.2.65"
log = "0.4.8"
net2 = "0.2.33"
pam-sandboxed = { path = "pam", version = "0.2.0" }
percent-encoding = "2.1.0"
regex = "1.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
time = "0.1.42"
tokio = { version = "0.2.4", features = ["full"] }
toml = "0.5.5"
url = "2.1.0"
webdav-handler = { path = "../webdav-handler-rs", version = "=0.2.0-alpha.3" }
