[package]
name = "webdav-server"

# When releasing to crates.io:
# - Update html_root_url in src/main.rs
# - Update CHANGELOG.md.
# - Create git tag webdav-server-0.x.y
version = "0.3.0"

description = "webdav/http server with support for user accounts"
readme = "README.md"
documentation = "https://docs.rs/webdav-server"
repository = "https://github.com/miquels/webdav-server-rs"
homepage = "https://github.com/miquels/webdav-server-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
categories = ["filesystem"]

[workspace]

[features]
# By default, the "pam" and "quota" features are enabled.
#
# Some systems do not have pam (like OpenBSD), so to compile this
# package without pam but with quota use:
#
#     cargo build --release --no-default-features --features=quota
#
default = [ "pam", "quota" ]

# dependencies for the feature.
pam = [ "pam-sandboxed" ]
quota = [ "fs-quota" ]

# Include debug info in release builds.
[profile.release]
debug = true

# Build dependencies in optimized mode, even for debug builds.
[profile.dev.package."*"]
opt-level = 3

# Build dev-dependencies in non-optimized mode, even for release builds.
[profile.dev.build-override]
opt-level = 0

[dependencies]
clap = "2.33.3"
enum_from_str = "0.1.0"
enum_from_str_derive = "0.1.0"
env_logger = "0.8.2"
fs-quota = { path = "fs_quota", version = "0.1.0", optional = true }
futures = "0.3.8"
handlebars = "2.0.4"
headers = "0.3.2"
http = "0.2.2"
hyper = "0.13.9"
lazy_static = "1.4.0"
libc = "0.2.81"
log = "0.4.11"
net2 = "0.2.37"
pam-sandboxed = { path = "pam", version = "0.2.0", optional = true }
percent-encoding = "2.1.0"
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
time = "0.1.42"
tokio = { version = "0.2.4", features = ["full"] }
toml = "0.5.7"
url = "2.2.0"
#webdav-handler = { path = "../webdav-handler-rs", version = "=0.2.0-alpha.5" }
webdav-handler = "=0.2.0-alpha.5"
pwhash = "0.3.1"
