[package]
name = "webdav-server"

# When releasing to crates.io:
# - Update html_root_url in src/main.rs
# - Update CHANGELOG.md.
# - Create git tag webdav-server-0.x.y
version = "0.4.0"

description = "webdav/http server with support for user accounts"
readme = "README.md"
documentation = "https://docs.rs/webdav-server"
repository = "https://github.com/miquels/webdav-server-rs"
homepage = "https://github.com/miquels/webdav-server-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
categories = ["filesystem"]

[workspace]

[features]
# By default, the "pam" and "quota" features are enabled.
#
# Some systems do not have pam (like OpenBSD), so to compile this
# package without pam but with quota use:
#
#     cargo build --release --no-default-features --features=quota
#
# default = [ "pam", "quota" ]

# dependencies for the feature.
# pam = [ "pam-sandboxed" ]
# quota = [ "fs-quota" ]

# Include debug info in release builds.
[profile.release]
debug = true

# Build dependencies in optimized mode, even for debug builds.
[profile.dev.package."*"]
opt-level = 3

# Build dev-dependencies in non-optimized mode, even for release builds.
[profile.dev.build-override]
opt-level = 0

[dependencies]
clap = "2.33.3"
enum_from_str = "0.1.0"
enum_from_str_derive = "0.1.0"
env_logger = "0.8.3"
#fs-quota = { path = "fs_quota", version = "0.1.0", optional = true }
futures = "0.3.15"
handlebars = "3.5.5"
headers = "0.3.4"
http = "0.2.4"
hyper = { version = "0.14.7", features = [ "http1", "http2", "server", "stream", "runtime" ] }
lazy_static = "1.4.0"
libc = "0.2.94"
log = "0.4.14"
nix = "0.21.0"
#pam-sandboxed = { path = "pam", version = "0.2.0", optional = true }
percent-encoding = "2.1.0"
regex = "1.5.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
socket2 = "0.4.0"
time = "0.1.42"
#tls-listener = { version = "0.2.1", features = [ "hyper-h1", "hyper-h2" ] }
tokio = { version = "1.5.0", features = ["full"] }
#tokio-rustls = "0.22.0"
toml = "0.5.8"
url = "2.2.2"
webdav-handler = { path = "webdav-handler-rs", version = "=0.2.0" }
#webdav-handler = "0.2.0"
pwhash = "1.0.0"

[target.'cfg(unix)'.dependencies]
fs-quota = { path = "fs_quota", version = "0.1.0", optional = true }
pam-sandboxed = { path = "pam", version = "0.2.0", optional = true }
tls-listener = { version = "0.2.1", features = [ "hyper-h1", "hyper-h2" ] }
tokio-rustls = "0.22.0"

