[package]
name = "pam-sandboxed"

# When releasing to crates.io:
# - Update html_root_url in src/lib.rs
# - Update CHANGELOG.md.
# - Run: cargo readme > README.md
# - Create git tag pam-sandboxed-0.x.y
version = "0.1.0"

readme = "README.md"
documentation = "https://docs.rs/pam-sandboxed"
repository = "https://github.com/miquels/webdav-server-rs"
homepage = "https://github.com/miquels/webdav-server-rs/tree/master/pam"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
categories = ["authentication"]

[build-dependencies]
cc = "1.0.36"

[dependencies]
bincode = "1.1.3"
env_logger = "0.6.1"
futures = "0.1.26"
libc = "0.2.53"
log = "0.4.6"
serde = "1.0.90"
serde_derive = "1.0.90"
threadpool = "1.7.1"
tokio = "0.1.19"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-reactor = "0.1.9"
tokio-uds = "0.2.5"
