[package]
name = "pam-sandboxed"

# When releasing to crates.io:
# - Update html_root_url in src/lib.rs
# - Update CHANGELOG.md.
# - Run: cargo readme > README.md
# - Create git tag pam-sandboxed-0.x.y
version = "0.2.0"

readme = "README.md"
documentation = "https://docs.rs/pam-sandboxed"
repository = "https://github.com/miquels/webdav-server-rs"
homepage = "https://github.com/miquels/webdav-server-rs/tree/master/pam"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
categories = ["authentication"]

[build-dependencies]
cc = "1.0.66"

[dependencies]
bincode = "1.3.1"
env_logger = "0.8.2"
futures = "0.3.8"
libc = "0.2.81"
log = "0.4.11"
serde = "1.0.118"
serde_derive = "1.0.118"
threadpool = "1.8.1"
tokio = { version = "0.2.24", features = ["uds", "rt-core", "io-util"] }
